<resources>


    <string name="app_name">tj_tax</string>
<string name="hello_world">
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码

        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码

        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码

        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
        最近有不少朋友私聊问应用宝、360软件助手之类的软件详情页怎么做，刚好，最近有时间就模仿360软件助手详情页给大家做个Demo，供大家参考。嗯，关于实现呢，我写了两种方式：

1、ScrollView内嵌软件介绍+ViewPager+ViewPager中是ScrollView，这种方式呢，纯原生，没有涉及到自定义控件，但是这样嵌套呢，涉及到测量以及事件的冲突处理，大家可以自己尝试去做一下，想像起来蛮容易的，做起来其实还是挺费劲的，代码我会给出，核心代码不多，大家自行参考。本文将重点分析第二种方式。

2、将做外层的ScrollView改为了自定义的一个控件，继承自LinearLayout，叫做StickyNavLayout，这里感谢小七的命名，同时本方式感谢二群暖暖提供的源码
\n
\n
\n
\n
</string>

    <!-- 全局文字-->
    <string name="server_inner_error">服务器内部错误,请稍后重试。</string>
    <string name="sms_code_send_success">验证码发送成功,稍后请查收</string>
    <string name="data_format_error">数据格式异常</string>
    <string name="register_successful">注册成功</string>
    <string name="get_sms_code">获取短信验证码</string>
    <string name="login_successful">登陆成功</string>

    <!-- 主界面底部菜单-->
    <string name="bottom_menu_home">首页</string>
    <string name="bottom_menu_question">问题库</string>
    <string name="bottom_menu_find">发现</string>
    <string name="bottom_menu_mine">我</string>


    <!-- 发现模块中文字-->
    <string name="news">资讯</string>
    <string name="must_know">办税须知</string>


    <!-- 首页文字内容-->
    <string name="clletion_talk">收藏话题</string>
    <string name="add_answer">添加回答</string>
    <string name="brown">发布</string>
    <string name="please_input_answer">请输入回答内容</string>
    <string name="please_input_content">请输入话题内容</string>
    <string name="add_discuss">新增讨论</string>
    <string name="next_step">下一步</string>
    <string name="industry">行业</string>
    <string name="tax_type">税种</string>
    <string name="industry_choice">行业选择</string>
    <string name="tax_type_choice">税种选择</string>
    <string name="title">标题</string>

    <!-- 我的模块中文字-->
    <string name="message">消息</string>
    <string name="my_question">我的提问</string>
    <string name="my_answer">我的回答</string>
    <string name="my_collection">我的收藏</string>
    <string name="user_callback">用户反馈</string>
    <string name="setting">设置</string>
    <string name="personal_info">个人信息</string>
    <string name="change_avatar">修改头像</string>
    <string name="nick">昵称</string>
    <string name="photos">相册</string>
    <string name="take_photos">拍照</string>
    <string name="please_input_nick">请输入昵称</string>
    <string name="update_nick">修改昵称</string>
    <string name="done">完成</string>
    <string name="please_input_callBack_content">请输入反馈内容</string>
    <string name="commit">提交</string>
    <string name="change_pass">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="push_message">推送消息</string>
    <string name="about_us">关于我们</string>
    <string name="old_pass">旧密码</string>
    <string name="please_input_old_pass">请输入旧密码</string>
    <string name="please_input_new_pass">请输入新密码</string>
    <string name="comfirm_pass">确认密码</string>
    <string name="please_input_again">请再次输入</string>
    <string name="forgot_pass">忘记密码?</string>
    <string name="vifi_code">验证码</string>
    <string name="vifi_code_can_not_be_empty">验证码不能为空</string>
    <string name="please_read_introduce">请阅读注册协议</string>
</resources>
