<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bottom_menu_color"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.easemob.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.easemob.easeui.widget.EaseTitleBar>

    <RelativeLayout
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/industry"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/imageView6"
            android:gravity="center"
            android:text="餐饮业"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

    <RelativeLayout
        style="@style/clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/tax_type"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:id="@+id/imageViewa6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/imageViewa6"
            android:gravity="center"
            android:text="餐饮业"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/please_input_content"
        android:padding="5dp"/>
</LinearLayout>
